--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -52,7 +52,7 @@
     "GAME_HEIGHT = 720\n",
     "\n",
     "def get_screen():\n",
-    "    return grab_screen(region=(0, 30, GAME_WIDTH, GAME_HEIGHT+30))\n",
+    "    return grab_screen(region=(0, 30, GAME_WIDTH, GAME_HEIGHT+30))    # 游戏最上面30像素是白色边框\n",
     "~~~"
    ]
   },
@@ -132,11 +132,15 @@
    "source": [
     "# 参照着上面的演示自己试一下\n",
     "import cv2\n",
-    "from pysekiro.img_tools.get_vertices import get_xywh\n",
-    "# from pysekiro.img_tools.grab_screen import get_screen\n",
     "\n",
-    "# img = get_screen()\n",
+    "from pysekiro.img_tools.get_vertices import get_xywh\n",
+    "\n",
+    "# 读取本地的图像来试验\n",
     "img = cv2.imread(\"demo.jpg\")\n",
+    "\n",
+    "# 抓取当前屏幕显示的图像来试验\n",
+    "# from pysekiro.img_tools.grab_screen import get_screen\n",
+    "# img = get_screen()\n",
     "\n",
     "get_xywh(img)"
    ]
