--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -127,12 +127,10 @@
     "class Play_Sekiro:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        batch_size=16,    # 样本抽取数量\n",
-    "        model_weights=None,\n",
-    "        save_path=None,\n",
-    "        reward_curve_save_path='reward.png',\n",
-    "        cheating_mode=False,    # 作弊模式\n",
-    "        play_yourself=False\n",
+    "        load_weights_path=None,\n",
+    "        save_weights_path=None,\n",
+    "        load_memory_path=None,\n",
+    "        save_memory_path=None,\n",
     "    ):\n",
     "~~~"
    ]
@@ -141,12 +139,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **batch_size** DQN在经验回放时样本抽取的数量\n",
-    "- **model_weights** 指定模型权重参数读取的路径。默认为None，不读取。\n",
-    "- **save_path** 指定模型权重参数保存的路径。默认为None，保存为'tmp_weights.h5'。\n",
-    "    - **注：默认是测试模式，若设置该参数，就会开启训练模式**\n",
-    "- **reward_curve_save_path** 奖励曲线保存路径，默认为'learn_online.png'。\n",
-    "- **cheating_mode** 作弊模式。此模式只以架势为计算奖励的标准，不计生命值，所以可以尽情的开**无限生命**的外挂。**注：其他就不要开了**"
+    "- **load_weights_path** 指定模型权重参数加载的路径。默认为None，不加载。\n",
+    "- **save_weights_path** 指定模型权重参数保存的路径。默认为None，不保存。**注：默认也是测试模式，若设置该参数，就会开启训练模式**\n",
+    "- **load_memory_path** 指定记忆加载的路径。默认为None，不加载。\n",
+    "- **save_memory_path** 指定记忆保存的路径。默认为None，不保存。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pysekiro.train import Play_Sekiro"
    ]
   },
   {
@@ -167,78 +172,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pysekiro.train import Play_Sekiro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 打开游戏，校准游戏窗口位置，然后运行这个开始直接在游戏中训练\n",
-    "train = Play_Sekiro(save_path=target+'_w.h5', reward_curve_save_path=target+'_train.png')\n",
-    "train.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 读取模型参数，测试学习的效果（不设置save_path就是测试模式）\n",
-    "test = Play_Sekiro(model_weights=target+'_w.h5', reward_curve_save_path=target+'_test.png')\n",
-    "test.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 作弊模式"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
-    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
-    "# target = 'Inner_Isshin' # 心中的一心"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pysekiro.train import Play_Sekiro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 打开游戏，校准游戏窗口位置，然后运行这个开始直接在游戏中训练\n",
-    "train = Play_Sekiro(save_path=target+'_c_w.h5', reward_curve_save_path=target+'_c_train.png', cheating_mode=True)\n",
-    "train.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 读取模型参数，测试学习的效果（不设置save_path就是测试模式）\n",
-    "test = Play_Sekiro(model_weights=target+'_c_w.h5', reward_curve_save_path=target+'_c_test.png', cheating_mode=True)\n",
+    "test = Play_Sekiro(\n",
+    "#     load_weights_path = target + '_w.h5',    # 注释这行就不加载模型，从零开始\n",
+    "#     save_weights_path = target + '_w.h5',    # 注释这行就不保存模型，并变成测试模式\n",
+    "#     load_memory_path = target + '_memory.json',    # 注释这行就不加载记忆\n",
+    "#     save_memory_path = target + '_memory.json',    # 注释这行就不保存记忆\n",
+    ")\n",
     "test.run()"
    ]
   }
