--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -192,7 +192,7 @@
     "~~~python\n",
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
-    "    img_roi = roi(img, x=77, x_w=489, y=656, y_h=656+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=77, x_w=488, y=656, y_h=656+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    g = g[0]\n",
     "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于50的设置为0\n",
@@ -205,12 +205,16 @@
     "\n",
     "# 获取目标生命  \n",
     "def get_Target_HP(img):\n",
-    "    img_roi = roi(img, x=77, x_w=349, y=67, y_h=67+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=77, x_w=347, y=67, y_h=67+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    g = g[0]\n",
-    "    retval, img_th = cv2.threshold(g, 60, 255, cv2.THRESH_TOZERO_INV)           # 图像阈值处理，像素点的值高于60的设置为0\n",
-    "    img_th = np.reshape(img_th, g.shape)\n",
-    "    Target_HP = get_value(img_th)    # 获取数值\n",
+    "    if g[0] > 30:\n",
+    "        retval, img_th = cv2.threshold(g, 60, 255, cv2.THRESH_TOZERO_INV)           # 图像阈值处理，像素点的值高于60的设置为0\n",
+    "        img_th = np.reshape(img_th, g.shape)\n",
+    "        Target_HP = get_value(img_th)    # 获取数值\n",
+    "    else:\n",
+    "        img_th = None\n",
+    "        Target_HP = 0\n",
     "#     print('\\n', img_th)\n",
     "#     print(Target_HP)\n",
     "    return Target_HP\n",
@@ -237,15 +241,15 @@
     "~~~python\n",
     "# 获取自身架势\n",
     "def get_Self_Posture(img):\n",
-    "    img_roi = roi(img, x=641, x_w=775, y=625, y_h=625+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=641, x_w=768, y=625, y_h=625+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    r = r[0]\n",
     "    if 169 < r[0] < 173:    # 开启条件1\n",
     "        retval, img_th = cv2.threshold(r, 120, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于120的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
-    "    elif r[0] > 253:    # 开启条件2\n",
-    "        retval, img_th = cv2.threshold(r, 220, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于220的设置为0\n",
+    "    elif r[0] > 250:    # 开启条件2\n",
+    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
     "    else:\n",
@@ -257,10 +261,10 @@
     "\n",
     "# 获取目标架势\n",
     "def get_Target_Posture(img):\n",
-    "    img_roi = roi(img, x=641, x_w=874, y=46, y_h=46+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=641, x_w=871, y=46, y_h=46+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    r = r[0]\n",
-    "    if r[0] > 200:    # 开启条件1\n",
+    "    if (r[0] > 200 and abs(int(r[0]) - int(r[1])) > 10) or r[0] > 250:    # 开启条件1\n",
     "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Target_Posture = get_value(img_th)\n",
@@ -345,19 +349,6 @@
     "~~~python\n",
     "# virtual keys\n",
     "vk = {\n",
-    "    'W' : 0x57,\n",
-    "    'S' : 0x53,\n",
-    "    'A' : 0x41,\n",
-    "    'D' : 0x44,\n",
-    "    'LSHIFT' : 0xA0,\n",
-    "    'SPACE'  : 0x20,\n",
-    "\n",
-    "    'J' : 0x4A,\n",
-    "    # 'LCONTROL' : 0xA2,\n",
-    "    'K' : 0x4B,\n",
-    "    #'F' : 0x46,\n",
-    "    'R' : 0x52,\n",
-    "\n",
     "    'T' : 0x54,\n",
     "    'P' : 0x50\n",
     "}\n",
@@ -379,32 +370,11 @@
     "~~~python\n",
     "def key_check():\n",
     "    keys = []\n",
-    "    for key in ['W', 'S', 'A', 'D', 'LSHIFT', 'SPACE', 'J', 'K', 'R', 'T', 'P']:\n",
+    "    for key in ['T', 'P']:\n",
     "        if wapi.GetAsyncKeyState(vk[key]):\n",
     "            keys.append(key)\n",
     "    return keys\n",
     "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "可以运行以下代码体验一下，按 P 停止"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pysekiro.get_keys import key_check\n",
-    "while True:\n",
-    "    keys = key_check()\n",
-    "    print(f'\\r{str(keys):<64}', end = '')\n",
-    "    if 'P' in keys:\n",
-    "        break"
    ]
   },
   {
@@ -507,7 +477,7 @@
     "    # 'LCONTROL' : 0x1D,\n",
     "    'K' : 0x25,\n",
     "    # 'F' : 0x21,\n",
-    "    'R' : 0x13,\n",
+    "    # 'R' : 0x13,\n",
     "}\n",
     "~~~"
    ]
