--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -474,10 +474,7 @@
     "    # 'Y' : 0x15,\n",
     "\n",
     "    'J' : 0x24,\n",
-    "    # 'LCONTROL' : 0x1D,\n",
     "    'K' : 0x25,\n",
-    "    # 'F' : 0x21,\n",
-    "    # 'R' : 0x13,\n",
     "}\n",
     "~~~"
    ]
@@ -537,8 +534,8 @@
     "        act = Jump         # 跳跃\n",
     "    else:\n",
     "        act = NOKEY        # 无键, 无动作\n",
-    "    act_process = threading.Thread(target=act)\n",
-    "    act_process.start()\n",
+    "    \n",
+    "    act()\n",
     "~~~"
    ]
   }
