--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -163,20 +163,11 @@
    "outputs": [],
    "source": [
     "train = Play_Sekiro(\n",
-    "#     load_weights_path = target + '_w.h5',    # 注释这行就不加载模型，从零开始\n",
+    "    load_weights_path = target + '_w.h5',    # 注释这行就不加载模型，从零开始\n",
     "    save_weights_path = target + '_w.h5',    # 注释这行就不保存模型，并变成测试模式\n",
-    "#     load_memory_path = target + '_memory.json',    # 注释这行就不加载记忆\n",
+    "    load_memory_path = target + '_memory.json',    # 注释这行就不加载记忆\n",
     "    save_memory_path = target + '_memory.json',    # 注释这行就不保存记忆\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 当提示 Ready! 后\n",
-    "    - 按 T 开始\n",
-    "    - 按 P 结束"
    ]
   },
   {
@@ -186,6 +177,15 @@
    "outputs": [],
    "source": [
     "train.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   }
  ],
