--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -48,11 +48,11 @@
     "追加了以下内容\n",
     "~~~python\n",
     "# 游戏窗口大小\n",
-    "GAME_WIDTH = 1280\n",
-    "GAME_HEIGHT = 720\n",
+    "GAME_WIDTH = 800\n",
+    "GAME_HEIGHT = 450\n",
     "\n",
     "def get_screen():\n",
-    "    return grab_screen(region=(0, 30, GAME_WIDTH, GAME_HEIGHT+30))    # 游戏最上面30像素是白色边框\n",
+    "    return grab_screen(region=(0, 31, GAME_WIDTH, GAME_HEIGHT+31))    # 游戏最上面31像素是白色边框\n",
     "~~~"
    ]
   },
@@ -135,12 +135,9 @@
     "\n",
     "from pysekiro.img_tools.get_vertices import get_xywh\n",
     "\n",
-    "# 读取本地的图像来试验\n",
-    "img = cv2.imread(\"demo.jpg\")\n",
-    "\n",
     "# 抓取当前屏幕显示的图像来试验\n",
-    "# from pysekiro.img_tools.grab_screen import get_screen\n",
-    "# img = get_screen()\n",
+    "from pysekiro.img_tools.grab_screen import get_screen\n",
+    "img = get_screen()\n",
     "\n",
     "get_xywh(img)"
    ]
@@ -191,11 +188,12 @@
     "\n",
     "~~~python\n",
     "# 获取自身生命\n",
+    "# max 257\n",
     "def get_Self_HP(img):\n",
-    "    img_roi = roi(img, x=77, x_w=488, y=656, y_h=656+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=48, x_w=305, y=409, y_h=409+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    g = g[0]\n",
-    "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于50的设置为0\n",
+    "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)              # 图像阈值处理，像素点的值低于50的设置为0\n",
     "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
     "    img_th = np.reshape(img_th, g.shape)\n",
     "    Self_HP = get_value(img_th)    # 获取数值\n",
@@ -204,17 +202,15 @@
     "    return Self_HP\n",
     "\n",
     "# 获取目标生命  \n",
+    "# max 168\n",
     "def get_Target_HP(img):\n",
-    "    img_roi = roi(img, x=77, x_w=347, y=67, y_h=67+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=48, x_w=216, y=41, y_h=41+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    g = g[0]\n",
-    "    if g[0] > 30:\n",
-    "        retval, img_th = cv2.threshold(g, 60, 255, cv2.THRESH_TOZERO_INV)           # 图像阈值处理，像素点的值高于60的设置为0\n",
-    "        img_th = np.reshape(img_th, g.shape)\n",
-    "        Target_HP = get_value(img_th)    # 获取数值\n",
-    "    else:\n",
-    "        img_th = None\n",
-    "        Target_HP = 0\n",
+    "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于40的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
+    "    img_th = np.reshape(img_th, g.shape)\n",
+    "    Target_HP = get_value(img_th)    # 获取数值\n",
     "#     print('\\n', img_th)\n",
     "#     print(Target_HP)\n",
     "    return Target_HP\n",
@@ -239,32 +235,37 @@
     "- **注意：目前设置的阈值不是最优的，但获取正常数值的稳定性较高，所以暂时使用这个阈值。如果未来发现更合适的阈值，可能会更改此阈值**\n",
     "\n",
     "~~~python\n",
-    "# 获取自身架势\n",
+    "# max 82\n",
     "def get_Self_Posture(img):\n",
-    "    img_roi = roi(img, x=641, x_w=768, y=625, y_h=625+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=401, x_w=483, y=389, y_h=389+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    r = r[0]\n",
-    "    if 169 < r[0] < 173:    # 开启条件1\n",
-    "        retval, img_th = cv2.threshold(r, 120, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于120的设置为0\n",
+    "    if r[0] == 255:\n",
+    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
-    "    elif r[0] > 250:    # 开启条件2\n",
-    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
+    "    elif 155 < r[0] < 170:\n",
+    "        retval, img_th = cv2.threshold(r, 100, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于100的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Self_Posture = get_value(img_th)\n",
     "    else:\n",
     "        img_th = None\n",
     "        Self_Posture = 0\n",
-    "    # print('\\n', img_th)\n",
-    "    # print(Self_Posture)\n",
+    "#     print('\\n', img_th)\n",
+    "#     print(Self_Posture)\n",
     "    return Self_Posture\n",
     "\n",
     "# 获取目标架势\n",
+    "# max 143\n",
     "def get_Target_Posture(img):\n",
-    "    img_roi = roi(img, x=641, x_w=871, y=46, y_h=46+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=401, x_w=544, y=29, y_h=29+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "    r = r[0]\n",
-    "    if (r[0] > 200 and abs(int(r[0]) - int(r[1])) > 10) or r[0] > 250:    # 开启条件1\n",
+    "    if r[0] == 255:\n",
+    "        retval, img_th = cv2.threshold(r, 160, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
+    "        img_th = np.reshape(img_th, r.shape)\n",
+    "        Target_Posture = get_value(img_th)\n",
+    "    elif r[0] > 190:\n",
     "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
     "        img_th = np.reshape(img_th, r.shape)\n",
     "        Target_Posture = get_value(img_th)\n",
