--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -19,40 +19,34 @@
     "        - 按键设置\n",
     "            - 移动\n",
     "                - 移动 前\n",
-    "                    - 设置 W\n",
+    "                    - 设置 W (默认)\n",
     "                - 移动 后\n",
-    "                    - 设置 S\n",
+    "                    - 设置 S (默认)\n",
     "                - 移动 左\n",
-    "                    - 设置 A\n",
+    "                    - 设置 A (默认)\n",
     "                - 移动 右\n",
-    "                    - 设置 D\n",
+    "                    - 设置 D (默认)\n",
     "                - 垫步、（长按）冲刺\n",
-    "                    - 设置 .Shift\n",
+    "                    - 设置 .Shift (默认)\n",
     "                - 跳跃\n",
-    "                    - 设置 Space\n",
+    "                    - 设置 Space (默认)\n",
     "            - 视角操作\n",
-    "                - 重置视角/固定目标\n",
-    "                    - 设置 Y\n",
+    "                - **重置视角/固定目标**\n",
+    "                    - 设置 Y (需要设置)\n",
     "            - 攻击动作\n",
     "                - **攻击**\n",
-    "                    - 设置 J\n",
-    "                - 使用义手忍具\n",
-    "                    - 设置 .Ctrl\n",
+    "                    - 设置 J (需要设置)\n",
     "                - **防御**\n",
-    "                    - 设置 K\n",
-    "                - 钩绳\n",
-    "                    - 设置 F\n",
-    "                - 使用道具\n",
-    "                    - 设置 R\n",
+    "                    - 设置 K (需要设置)\n",
     "        - 图像设定\n",
     "            - **屏幕模式**\n",
     "                - 窗口\n",
     "            - **屏幕分辨率**\n",
-    "                - 1280 x 720\n",
+    "                - **800 x 450** <- 1280 x 720\n",
     "            - 自动绘图调整\n",
     "                - OFF\n",
     "            - 质量设定\n",
-    "                - 低"
+    "                - **最高** <- 低"
    ]
   },
   {
@@ -67,7 +61,7 @@
    "metadata": {},
    "source": [
     "- 将游戏窗口放在左上方  \n",
-    "![example_01.png](https://github.com/ricagj/pysekiro/blob/main/imgs/example_01.png?raw=true?raw=true)"
+    "![adjustment_01.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment_01.png?raw=true)"
    ]
   },
   {
@@ -92,6 +86,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "还是不懂的话，就看这个gif https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.gif"
    ]
   },
@@ -99,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![adjustment.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment.png?raw=true)"
+    "![adjustment_02.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment_02.png?raw=true)"
    ]
   },
   {
