--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -170,114 +170,56 @@
     "要获取的状态有：自身生命，自身架势，目标生命，目标架势。  \n",
     "- 获取方法\n",
     "    1. 靠上面 **1.2顶点位置获取** 把状态所在图像的位置抠出来（得到x, x_w, y, y_h）。\n",
-    "    2. 选取ROI区域（例如生命值所在的图像），进行颜色通道分离，取某颜色通道的图像，然后用图像阈值处理（cv2.threshold）保留关键部分，去除其他部分。\n",
-    "    3. 将关键部分量化"
+    "    2. 选取ROI区域（例如生命值所在的图像），进行颜色通道分离，取某颜色通道的图像，然后对图像进行处理。\n",
+    "    3. 量化"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 生命值的获取\n",
-    "    1. 截取图像中生命值的区域\n",
-    "    2. ~~由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像~~\n",
-    "    2. 打脸，竟然是G(Green)通道的图像能准确获取数值\n",
-    "    3. 通过观察发现，剩余生命值部分的像素点的值全部高于某个值，所以用图像阈值处理，将像素点值低于这个值的设置为0\n",
-    "    4. 处理完毕，获取数值\n",
-    "- **注意：目前设置的阈值不是最优的，但获取正常数值的稳定性较高，所以暂时使用这个阈值。如果未来发现更合适的阈值，可能会更改此阈值**\n",
+    "### 1.3.1 生命值的获取"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 截取图像中生命值的区域\n",
+    "2. ~~由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像~~\n",
+    "2. 打脸，竟然是G(Green)通道的图像能准确获取数值\n",
+    "3. 通过观察发现，剩余生命值部分的像素点的值集中在一个范围，所以用图像阈值处理，将像素值不在范围内的点的值的设置为0\n",
+    "4. 处理完毕，获取数值\n",
     "\n",
     "~~~python\n",
     "# 获取自身生命\n",
-    "# max 257\n",
     "def get_Self_HP(img):\n",
     "    img_roi = roi(img, x=48, x_w=305, y=409, y_h=409+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    \n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    g = g[0]\n",
+    "    \n",
     "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)              # 图像阈值处理，像素点的值低于50的设置为0\n",
     "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
-    "    img_th = np.reshape(img_th, g.shape)\n",
+    "    \n",
     "    Self_HP = get_value(img_th)    # 获取数值\n",
-    "#     print('\\n', img_th)\n",
-    "#     print(Self_HP)\n",
+    "    \n",
     "    return Self_HP\n",
     "\n",
-    "# 获取目标生命  \n",
-    "# max 168\n",
+    "# 获取目标生命\n",
     "def get_Target_HP(img):\n",
     "    img_roi = roi(img, x=48, x_w=216, y=41, y_h=41+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    \n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    g = g[0]\n",
-    "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于40的设置为0\n",
+    "    \n",
+    "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于25的设置为0\n",
     "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
-    "    img_th = np.reshape(img_th, g.shape)\n",
+    "    \n",
     "    Target_HP = get_value(img_th)    # 获取数值\n",
-    "#     print('\\n', img_th)\n",
-    "#     print(Target_HP)\n",
+    "\n",
     "    return Target_HP\n",
     "~~~\n",
     "\n",
     "![demo_get_Self_HP.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo_get_Self_HP.gif?raw=true)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 架势的获取\n",
-    "    - 架势和生命不同，它是从中间开始往两边增加的，但我们没有必要两边都获取，只需要一边就够了，这里我选择的是中间和右边。\n",
-    "    - 还有几个问题比较麻烦，就是架势在归零的时候会不显示，积累到一定时候颜色会变化。设置开启条件后能较稳定的获取数值。\n",
-    "    - 所谓的开启条件，就是架势条中间那条白色的线所在的像素点，当这个像素点满足一定条件时，才处理图像并计算数值。\n",
-    "    - \n",
-    "    1. 截取图像中架势的区域\n",
-    "    2. 由于架势的颜色也是偏向于红色（相比蓝色和绿色），所以进行颜色通道分离，取R(Red)通道的图像\n",
-    "    3. 通过观察发现，架势条中间那条白色的线所在的像素点的值大多集中在某范围内(例如自身架势的白线在架势积累较少时主要集中在 156 ~ 159)，还有 另外一个某范围内(例如自身架势的白线在架势积累较多时主要集中在 244 ~ 248)，将其视为架势条正在显示的标志，触发开启条件。\n",
-    "    4. 同样做图像阈值处理，处理完成后，获取数值\n",
-    "- **注意：目前设置的阈值不是最优的，但获取正常数值的稳定性较高，所以暂时使用这个阈值。如果未来发现更合适的阈值，可能会更改此阈值**\n",
-    "\n",
-    "~~~python\n",
-    "# max 82\n",
-    "def get_Self_Posture(img):\n",
-    "    img_roi = roi(img, x=401, x_w=483, y=389, y_h=389+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
-    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    if r[0] == 255:\n",
-    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Self_Posture = get_value(img_th)\n",
-    "    elif 155 < r[0] < 170:\n",
-    "        retval, img_th = cv2.threshold(r, 100, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于100的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Self_Posture = get_value(img_th)\n",
-    "    else:\n",
-    "        img_th = None\n",
-    "        Self_Posture = 0\n",
-    "#     print('\\n', img_th)\n",
-    "#     print(Self_Posture)\n",
-    "    return Self_Posture\n",
-    "\n",
-    "# 获取目标架势\n",
-    "# max 143\n",
-    "def get_Target_Posture(img):\n",
-    "    img_roi = roi(img, x=401, x_w=544, y=29, y_h=29+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
-    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    if r[0] == 255:\n",
-    "        retval, img_th = cv2.threshold(r, 160, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Target_Posture = get_value(img_th)\n",
-    "    elif r[0] > 190:\n",
-    "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Target_Posture = get_value(img_th)\n",
-    "    else:\n",
-    "        img_th = None\n",
-    "        Target_Posture = 0\n",
-    "#     print('\\n', img_th)\n",
-    "#     print(Target_Posture)\n",
-    "    return Target_Posture\n",
-    "~~~\n",
-    "\n",
-    "![demo_get_Self_Posture.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo_get_Self_Posture.gif?raw=true)"
    ]
   },
   {
@@ -301,6 +243,82 @@
     "            break\n",
     "        count += 1\n",
     "    return count\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3.2 架势的获取"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "（参考CSDN上的[OpenCV-Python教程（8、Canny边缘检测）](https://blog.csdn.net/sunny2038/article/details/9202641)）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 架势和生命不同，它是从中间开始往两边增加的，但我们没有必要两边都获取，只需要一边就够了，这里我选择的是中间和右边。\n",
+    "- 还有几个问题比较麻烦，就是架势在归零的时候会不显示，积累到一定时候颜色会变化。\n",
+    "- 不过好在架势出现时中间有条白线，其像素点的值也集中在一定范围。所以要是这点的值进入这个范围，就判断为架势开始积累了\n",
+    "- 架势出现后，通过Canny边缘检测找到架势的边缘\n",
+    "- 量化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 旧版\n",
+    "    1. ~~截取图像中架势的区域~~\n",
+    "    2. ~~由于架势的颜色也是偏向于红色（相比蓝色和绿色），所以进行颜色通道分离，取R(Red)通道的图像~~\n",
+    "    3. ~~通过观察发现，架势条中间那条白色的线所在的像素点的值大多集中在某范围内(例如自身架势的白线在架势积累较少时主要集中在 156 ~ 159)，还有 另外一个某范围内(例如自身架势的白线在架势积累较多时主要集中在 244 ~ 248)，将其视为架势条正在显示的标志，触发开启条件。~~\n",
+    "    4. ~~同样做图像阈值处理，处理完成后，获取数值~~\n",
+    "- 新版\n",
+    "    1. 截取图像中架势的区域\n",
+    "    2. 进行颜色通道分离，取R(Red)通道的图像\n",
+    "    3. while_line（白线，准确的说应该是白点。）出现后才开始边缘检测"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~python\n",
+    "# 获取自身架势\n",
+    "def get_Self_Posture(img):\n",
+    "    img_roi = roi(img, x=401, x_w=490, y=389, y_h=389+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
+    "    \n",
+    "    white_line = r[0][0]\n",
+    "    if 155 < white_line < 170 or white_line > 250:\n",
+    "        canny = cv2.Canny(cv2.GaussianBlur(r,(3,3),0), 0, 100)    # Canny边缘检测\n",
+    "        Self_Posture =  np.argmax(canny)\n",
+    "    else:\n",
+    "        Self_Posture = 0\n",
+    "    \n",
+    "    return Self_Posture\n",
+    "\n",
+    "# up to data\n",
+    "# 获取目标架势\n",
+    "def get_Target_Posture(img):\n",
+    "    img_roi = roi(img, x=401, x_w=553, y=29, y_h=29+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
+    "    \n",
+    "    white_line = r[0][0]\n",
+    "    if white_line > 190:\n",
+    "        canny = cv2.Canny(cv2.GaussianBlur(r,(3,3),0), 0, 100)    # Canny边缘检测\n",
+    "        Target_Posture =  np.argmax(canny)\n",
+    "    else:\n",
+    "        Target_Posture = 0\n",
+    "    \n",
+    "    return Target_Posture\n",
     "~~~"
    ]
   },
